# TradingWebDashboard

./: .gitignore  Dockerfile  PROJECT_README.md  README.md  TESTING.md  TEST_SUMMARY.md  railway.toml  run-tests.sh  test_bybit_connection.rs  test_connection.rs  test_connection_Cargo.toml
crypto-dash-ai-backend/: .env.example  Dockerfile  requirements.txt
crypto-dash-ai-backend/app/: main.py  settings.py
crypto-dash-ai-backend/app/api/: insights.py
crypto-dash-ai-backend/app/models/: schemas.py
crypto-dash-ai-backend/app/services/: analysis.py  geminiai.py  market.py
crypto-dash-backend/: .env.example  Cargo.toml  Dockerfile  README.md
crypto-dash-backend/crates/api/: Cargo.toml
crypto-dash-backend/crates/api/src/: bybit_test.rs  catalog.rs  lib.rs  main.rs  state.rs
crypto-dash-backend/crates/api/src/routes/: candles.rs  exchanges.rs  health.rs  mod.rs  symbols.rs
crypto-dash-backend/crates/api/src/ws/: mod.rs  server.rs
crypto-dash-backend/crates/cache/: Cargo.toml
crypto-dash-backend/crates/cache/src/: lib.rs  mem.rs
crypto-dash-backend/crates/core/: Cargo.toml
crypto-dash-backend/crates/core/src/: config.rs  lib.rs  model.rs  normalize.rs  time.rs
crypto-dash-backend/crates/exchanges/binance/: Cargo.toml
crypto-dash-backend/crates/exchanges/binance/src/: adapter.rs  lib.rs  types.rs
crypto-dash-backend/crates/exchanges/bybit/: Cargo.toml
crypto-dash-backend/crates/exchanges/bybit/src/: adapter.rs  lib.rs  subscription_test.rs  test_types.rs  types.rs
crypto-dash-backend/crates/exchanges/common/: Cargo.toml
crypto-dash-backend/crates/exchanges/common/src/: adapter.rs  client.rs  lib.rs  mock.rs  retry.rs
crypto-dash-backend/crates/stream-hub/: Cargo.toml
crypto-dash-backend/crates/stream-hub/src/: hub.rs  lib.rs  topics.rs
crypto-dash-backend/integration-tests/: Cargo.toml
crypto-dash-backend/integration-tests/src/: common.rs  lib.rs
crypto-dash-backend/integration-tests/tests/: api_integration_tests.rs  edge_case_tests.rs  websocket_tests.rs
crypto-dash-backend/scripts/: dev.sh
crypto-dash-backend/tests/: integration_test.rs
crypto-dash-frontend/: Dockerfile  README.md  jest.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts
crypto-dash-frontend/src/app/: layout.tsx  page.tsx
crypto-dash-frontend/src/components/: CandlestickChart.tsx  ExchangeSelector.tsx  LatencyBadge.tsx  MarketCharts.tsx  TickerSelector.tsx  TickerTable.tsx
crypto-dash-frontend/src/lib/: api.ts  types.ts  useWebSocket.ts
crypto-dash-frontend/tests/: global-setup.ts  global-teardown.ts  setup.ts
crypto-dash-frontend/tests/e2e/: browser-edge-cases.spec.ts  dashboard.spec.ts
crypto-dash-frontend/tests/integration/: full-app.test.tsx
crypto-dash-frontend/tests/unit/: TickerTable.test.tsx  api.test.ts  useWebSocket.test.ts
