[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core", 
    "crates/stream-hub",
    "crates/cache",
    "crates/exchanges/common",
    "crates/exchanges/binance",
    "crates/exchanges/bybit",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json", "stream"] }
rust_decimal = { version = "1.33", features = ["serde_json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
url = "2.4"

[profile.dev]
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"