[package]
name = "crypto-dash-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-dash-api = { path = "../crates/api" }
crypto-dash-core = { path = "../crates/core" }
crypto-dash-stream-hub = { path = "../crates/stream-hub" }
crypto-dash-cache = { path = "../crates/cache" }
crypto-dash-exchanges-common = { path = "../crates/exchanges/common" }
crypto-dash-binance = { path = "../crates/exchanges/binance" }
crypto-dash-bybit = { path = "../crates/exchanges/bybit" }
tokio = { workspace = true }
tokio-test = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }