[package]
name = "crypto-dash-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
crypto-dash-core = { path = "../core" }
crypto-dash-stream-hub = { path = "../stream-hub" }
crypto-dash-cache = { path = "../cache" }
crypto-dash-exchanges-common = { path = "../exchanges/common" }
crypto-dash-binance = { path = "../exchanges/binance" }
crypto-dash-bybit = { path = "../exchanges/bybit" }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }