[package]
name = "crypto-dash-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-dash-core = { path = "../core" }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }