[package]
name = "crypto-dash-stream-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-dash-core = { path = "../core" }
tokio = { workspace = true }
tokio-util = "0.7"
futures = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }