[package]
name = "crypto-dash-exchanges-common"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-dash-core = { path = "../../core" }
crypto-dash-stream-hub = { path = "../../stream-hub" }
crypto-dash-cache = { path = "../../cache" }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }